--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.5",
     "react": "18.3.1",
     "react-hook-form": "^7.53.0",
     "react-native": "0.75.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
@@ -31,6 +33,7 @@
     "@react-native/eslint-config": "0.75.2",
     "@react-native/metro-config": "0.75.2",
     "@react-native/typescript-config": "0.75.2",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
