--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.5",
@@ -19,7 +20,8 @@
     "react-hook-form": "^7.53.0",
     "react-native": "0.75.2",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.18.1",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-reanimated": "^3.15.2",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.1.0",
