--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.75.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-image-crop-picker": "^0.41.2",
     "react-native-reanimated": "^3.15.2",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
